--- a/examples/nunjucks/views/helloWorld.html
+++ b/examples/nunjucks/views/helloWorld.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div>
-      <h1>{{ message }}</h1>
+      <h1 class="myStyle">{{ message }}</h1>
     </div>
   </body>
 </html>
