Switch to pdf-puppeteer. Add example of setting headers and footers

--- a/examples/pug/views/helloWorld.pug
+++ b/examples/pug/views/helloWorld.pug
@@ -1,7 +1,6 @@
 doctype html
 html(lang="en")
   head
-    title= title
     link(type="text/css", href="http://localhost:3001/static/styles.css", media="print", rel="stylesheet")
 
   body
@@ -10,3 +9,7 @@ html(lang="en")
 
       div
         h1.myStyle= message
+
+      div.pagebreak
+        h1 Second page
+
